<resources>
    <string name="app_name">WeatherApp</string>
    <string name="temperature">Temprature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">Powered By Yahoo</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="loading">loading</string>

    <string name="temperature_output">%1$d&#176;%2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
