<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.tejalpatel.weatherapp.WeatherActivity">


    <LinearLayout
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Select Location"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:id="@+id/spnLocation"
            android:entries="@array/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewWeatherIcon"
        android:src="@drawable/icon_na"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/condition_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/textViewTemperature"
        android:layout_below="@+id/imageViewWeatherIcon"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/condition"
        android:textColor="@color/black"
        android:id="@+id/textViewCondition"
        android:layout_below="@+id/textViewTemperature"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:textColor="@color/white"
        android:id="@+id/textViewLocation"
        android:layout_below="@+id/textViewCondition"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forecastContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="80dp">

        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_0"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_1"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />
        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_2"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />
        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_3"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />
        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_4"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />
        <fragment
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:name="com.example.tejalpatel.weatherapp.Fragment.WeatherConditionFragment"
            android:id="@+id/forecast_5"
            android:layout_weight="1"
            tools:layout="@layout/fragment_weather_condition" />

    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yahoo_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/powered_by_yahoo" />

</RelativeLayout>